Adjusted use of threads